--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -43,6 +43,8 @@
     <Reference Include="mscorlib" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Controls, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="System.Windows.Controls.Input.Toolkit, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Net" />
     <Reference Include="System.Windows.Browser" />
@@ -52,7 +54,7 @@
     <Compile Include="Controllers\TypeController.cs" />
     <Compile Include="Controllers\UIElementExtensions.cs" />
     <Compile Include="View\Cell.cs" />
-    <Compile Include="View\CellVSM.cs" />
+    <Compile Include="View\CustomVSM.cs" />
     <Compile Include="View\DataGrid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Row.cs" />
