Added a simple debugger visualizer for Silverlight.

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Views\OSBrush.cs" />
     <Compile Include="Views\OSColors.cs" />
     <Compile Include="Views\Row.cs" />
+    <Compile Include="VisualTreeVisualizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="themes\generic.xaml">
