Added an event allowing the custom creation of a new item. issue: #56
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Models\ExtendedSortDescription.cs" />
     <Compile Include="Models\IndexedPropertyPathNode.cs" />
     <Compile Include="Models\IPropertyPathNode.cs" />
+    <Compile Include="Models\NewItemEventArgs.cs" />
     <Compile Include="Models\NewItemModel.cs" />
     <Compile Include="Models\PropertyNodeType.cs" />
     <Compile Include="Models\PropertyPathNode.cs" />
