Fixed the synchronization between a scroll and the ScrollExtensions class which completes the ability to bind to the offsets. issue: #56
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Controllers\NumberToVisibilityConverter.cs" />
     <Compile Include="Controllers\ScrollIntoViewBehavior.cs" />
     <Compile Include="Controllers\SumAggregate.cs" />
+    <Compile Include="Controllers\SyncScrollBehavior.cs" />
     <Compile Include="Models\CollectionViewNode.cs" />
     <Compile Include="Models\CustomSizeChangedEventArgs.cs" />
     <Compile Include="Models\Export\ClipboardExporter.cs" />
