--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AutoSizeOnDoubleClickBehavior.cs" />
+    <Compile Include="Controllers\ColumnsCollection.cs" />
     <Compile Include="Controllers\ControllerCollection.cs" />
     <Compile Include="Controllers\BooleanToVisibilityConverter.cs" />
     <Compile Include="Controllers\ByteArrayUriToImageConverter.cs" />
