Added sorting tests.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Controllers\ScrollOnHomeEndBehaviour.cs" />
     <Compile Include="Models\CollectionViewNode.cs" />
     <Compile Include="Models\CustomSizeChangedEventArgs.cs" />
+    <Compile Include="Models\DataWrapper.cs" />
     <Compile Include="Models\Export\ClipboardExporter.cs" />
     <Compile Include="Models\Export\Exporter.cs" />
     <Compile Include="Controllers\KeyHelper.cs" />
