--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AutoSizeOnDoubleClickBehavior.cs" />
+    <Compile Include="Controllers\BindingListener.cs" />
     <Compile Include="Controllers\ColumnsCollection.cs" />
     <Compile Include="Controllers\ControllerCollection.cs" />
     <Compile Include="Controllers\BooleanToVisibilityConverter.cs" />
@@ -85,7 +86,10 @@
     <Compile Include="Controllers\CellController.cs" />
     <Compile Include="Controllers\Column.cs" />
     <Compile Include="Controllers\ColumnResizingBehavior.cs" />
+    <Compile Include="Controllers\ConverterHelper.cs" />
     <Compile Include="Controllers\DataBinder.cs" />
+    <Compile Include="Controllers\DataStateBehavior.cs" />
+    <Compile Include="Controllers\DataStateSwitchBehavior.cs" />
     <Compile Include="Controllers\EditorController.cs" />
     <Compile Include="Controllers\FooterCellController.cs" />
     <Compile Include="Controllers\HandleNavigationBehaviour.cs" />
