An attempt to create a faster ItemsControl by copying code from Moonlight.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -127,7 +127,16 @@
     <Compile Include="Controllers\SortingCommand.cs" />
     <Compile Include="Controllers\TypeExtensions.cs" />
     <Compile Include="Models\StandardPropertyPathNode.cs" />
+    <Compile Include="Views\DoubleKeyedDictionary.cs" />
     <Compile Include="Views\FooterRow.cs" />
+    <Compile Include="Views\GenerationState.cs" />
+    <Compile Include="Views\IItemContainerGenerator.cs" />
+    <Compile Include="Views\IRecyclingItemContainerGenerator.cs" />
+    <Compile Include="Views\ItemCollection.cs" />
+    <Compile Include="Views\ItemContainerGenerator.cs" />
+    <Compile Include="Views\ItemsChangedEventArgs.cs" />
+    <Compile Include="Views\ItemsChangedEventHandler.cs" />
+    <Compile Include="Views\ItemsControl.cs" />
     <Compile Include="Views\ItemsControlExtensions.cs" />
     <Compile Include="Views\Editor.cs" />
     <Compile Include="Views\DependencyObjectExtensions.cs" />
@@ -180,9 +189,11 @@
     <Compile Include="Controllers\DataGridController.cs" />
     <Compile Include="Views\HeaderCell.cs" />
     <Compile Include="Views\HeaderRow.cs" />
+    <Compile Include="Views\ItemsPresenter.cs" />
     <Compile Include="Views\NewRow.cs" />
     <Compile Include="Views\OSBrush.cs" />
     <Compile Include="Views\OSColors.cs" />
+    <Compile Include="Views\RangeCollection.cs" />
     <Compile Include="Views\Row.cs" />
     <Compile Include="Views\RowBase.cs" />
     <Compile Include="VisualTreeVisualizer.cs" />
