A prototype for exporting to Excel (xls).
3 tested libraries: NPOI, ExcelLite and MyXls. ExcelLite doesn't have fonts (it seems useless), it and MyXls do not support custom colours, NPOI's DLL is way too large (1260 K) and the colours do not work at all (people say they should work, perhaps a bug was introduced while porting to Silverlight).

Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -66,6 +66,13 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Lite.ExcelLibrary">
+      <HintPath>References\Lite.ExcelLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="MyXls.SL2">
+      <HintPath>References\MyXls.SL2.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI, Version=1.2.3.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
@@ -100,6 +107,7 @@
     <Compile Include="Models\CustomSizeChangedEventArgs.cs" />
     <Compile Include="Models\DataWrapper.cs" />
     <Compile Include="Models\Export\ClipboardExporter.cs" />
+    <Compile Include="Models\Export\ExcelXlsExporter.cs" />
     <Compile Include="Models\Export\Exporter.cs" />
     <Compile Include="Controllers\KeyHelper.cs" />
     <Compile Include="Models\Export\CellInfo.cs" />
