Completed the basics of the numbering.
- must add a property indicating if a column is sortable and disable it for the number column;
- must decide whether to make the numbering column public (people may want to change its header, for example);
- must decide a major architectural problem: should code which does not interact with models or other controllers reside in a controller or in the view itself?

Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Controllers\EditorController.cs" />
     <Compile Include="Controllers\FooterCellController.cs" />
     <Compile Include="Controllers\HandleNavigationBehaviour.cs" />
+    <Compile Include="Controllers\IndexToNumberConverter.cs" />
     <Compile Include="Controllers\NewItemCommand.cs" />
     <Compile Include="Controllers\NewRowController.cs" />
     <Compile Include="Controllers\NumberToVisibilityConverter.cs" />
