Attempted to fix the following: if there are relative columns the whole viewport is given to the cells but if rows have borders or other elements that take space out of the viewport a horizontal scroll appears. Tried to fix it by having the presenter of the row report its width but it doesn't work because this width may be greater than the viewport width as allowed by the scroller.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Controllers\SumAggregate.cs" />
     <Compile Include="Controllers\SyncScrollBehavior.cs" />
     <Compile Include="Controllers\ScrollOnHomeEndBehaviour.cs" />
+    <Compile Include="Controllers\ViewportWidthController.cs" />
     <Compile Include="Models\CollectionViewNode.cs" />
     <Compile Include="Models\CustomSizeChangedEventArgs.cs" />
     <Compile Include="Models\DataWrapper.cs" />
