Added an exporter (for now only data) to Open Document Sheet (ODS), part of ODF.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -74,6 +74,10 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Silverlight.SharpZipLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Company.DataGrid.ExportODF\References\Silverlight.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="mscorlib" />
     <Reference Include="system" />
@@ -115,6 +119,10 @@
     <None Include="Properties\AppManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Company.DataGrid.ExportODF\Company.DataGrid.ExportODF.csproj">
+      <Project>{16CDC9D1-C15D-431D-AE6E-5ED4859328FD}</Project>
+      <Name>Company.DataGrid.ExportODF</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Company.DataGrid\Company.DataGrid.csproj">
       <Project>{C1183088-7A54-45C8-8FFE-C9EBD11FD2A8}</Project>
       <Name>Company.DataGrid</Name>
