Created an aspect for empty strings and used it for a little simplification.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/Company.DataGrid/Company.DataGrid.csproj
+++ b/Company.DataGrid/Company.DataGrid.csproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aspects\ArgumentValidationAttribute.cs" />
+    <Compile Include="Aspects\NotEmptyAttribute.cs" />
     <Compile Include="Aspects\NotNullAttribute.cs" />
     <Compile Include="Aspects\Validate.cs" />
     <Compile Include="Automation\CellAutomationPeer.cs" />
