Renamed IsEditable to IsReadOnly and reversed its meaning. Fixed a small regression around AlwaysInEditMode.
Signed-off-by: ddobrev <dpldobrev@yahoo.com>

--- a/XamlGrid/XamlGrid.csproj
+++ b/XamlGrid/XamlGrid.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Automation\HeaderCellAutomationPeer.cs" />
     <Compile Include="Automation\HeaderRowAutomationPeer.cs" />
     <Compile Include="Automation\RowAutomationPeer.cs" />
+    <Compile Include="Controllers\BooleanToNegativeConverter.cs" />
     <Compile Include="Controllers\DragScrollBehavior.cs" />
     <Compile Include="Controllers\AutoSizeOnDoubleClickBehavior.cs" />
     <Compile Include="Controllers\ColumnsCollection.cs" />
